--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ h4 {
 	margin-top: 32px;
 	opacity: 80%;
 }
+h5 {
+	font-family: century gothic;
+	font-size: 19.2px;
+	margin-top: 16px;
+}
 .icons a {
 	margin-top: 0px;
 	margin-left: 12px;
