--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h4 {
 	opacity: 80%;
 	margin-bottom: 32px;
 }
-h5 {
+small {
 	font-family: century gothic;
 	font-size: 19.2px;
 	margin-top: 16px;
