--- a/css/style.css
+++ b/css/style.css
@@ -31,17 +31,17 @@ p {
 	margin-bottom: 0px;
 }
 h4 {
+	font-family: century gothic;
+	font-size: 19.2px;
+	margin-top: 16px;
+	margin-bottom: 0px;
+}
+h5 {
 	font-family: century gothic regular;
 	font-size: 13.33px;
 	margin-top: 32px;
 	opacity: 80%;
 	margin-bottom: 32px;
-}
-small {
-	font-family: century gothic;
-	font-size: 19.2px;
-	margin-top: 16px;
-	margin-bottom: 0px;
 }
 .icons a {
 	margin-top: 0px;
